# mod

./: Cargo.toml  cargo.dist.sh  gen.sh  package.json  test.sh
_tmpl/: Cargo.toml
_tmpl/src/: lib.rs
_tmpl/tests/: main.rs
auth_/: Cargo.toml  cron.yml
auth_/cron/: banTld.coffee  banTld.js  deno.jsonc  main.js  mod.coffee  mod.js  once.js  run.sh
auth_/err/: .id.yml  zh.yml
auth_/src/: err.rs  lib.rs  r.rs  signin.rs  signup.rs
captcha_/: Cargo.toml
captcha_/src/: lib.rs
captcha_/tests/: main.rs
demo_/: Cargo.toml
demo_/src/: lib.rs
user_/: Cargo.toml
user_/src/: lib.rs
user_/tests/: main.rs
