[package]
name = "auth_"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/mod.git"
homepage = "https://github.com/i18n-site/mod/tree/dev/mod/auth_"
description = "auth"
keywords = ["hpc", "mod"]

[dependencies]
aok = "0.1.17"
http = "1.2.0"
iat = { version = "0.1.2" }
icall = "0.1.46"
ctx_ = { version = "0.1.4", features = ["set_header"] }
tracing = "0.1.41"
xtld = "0.1.5"
header_host = "0.1.1"
set_cookie = "0.1.6"
ub64 = { version = "0.1.11", features = ["u64"] }
cookie_b = "0.1.16"
sts = "0.1.23"
xbin = "0.1.6"
intbin = "0.1.2"
xkv = { version = "0.1.44", features = ["r"] }
tokio = { version = "1.43.0", features = ["rt"] }
simple-useragent = "0.1.2"
static_init = "1.0.3"

[dev-dependencies]
xboot = "0.1.28"
