[package]
name = "captcha_"
version = "0.1.1"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/mod.git"
homepage = "https://github.com/i18n-site/mod/tree/dev/mod/captcha_"
description = "captcha"
keywords = ["hpc", "mod"]

[dependencies]
aok = "0.1.17"
click_captcha = { version = "0.1.34", features = [
  "ico_li",
  "make",
  "verify",
  "webp",
] }
icall = "0.1.46"
pb-jelly = "0.0.17"
pc = "0.1.12"
rand = "0.9.0"
s_ = "0.1.6"
ub64 = "0.1.11"
xbin = "0.1.6"
xboot = "0.1.28"
xerr = "0.1.15"
xkv = { version = "0.1.44", features = ["r"] }

[dev-dependencies]
loginit = "0.1.18"
static_init = "1.0.3"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "fs",
  "io-util",
] }

[package.metadata.docs.rs]
all-features = true
